welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:2: error: not found: value nbAdos
  nbAdos=0
  ^countTeen:4: error: not found: value nbAdos
    nbAdos=nbAdos+1
    ^countTeen:7: error: not found: value nbAdos
    nbAdos=nbAdos+1
    ^countTeen:10: error: not found: value nbAdos
    nbAdos=nbAdos+1
    ^countTeen:13: error: not found: value nbAdos
    nbAdos=nbAdos+1
    ^countTeen:14: error: not found: value nbAdos
  }else{nbAdos=0}
        ^